Refactored styling code. Need to do more refactoring. For some reason there is overflow for login/register pages, need to fix.

--- a/algspec-ui/src/styles/_variables.scss
+++ b/algspec-ui/src/styles/_variables.scss
@@ -9,3 +9,5 @@ $font_primary: 'Poppins', sans-serif;
 $dm_primary: #0E1C36;
 $dm_secondary: blue;
 $dm_text: #E1F5E9;
+$dm-link: #E1F5E9;
+$dm-link-hover: white;
